syntax = "proto3";

package auth_service.v1;

option go_package = "gateway/gen/go/auth_service/v1";
import "auth_service/v1/models.proto";

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  optional string company = 4;
}

message RefreshTokenRequest {
  string token = 1;
}
service AuthService {

  rpc SignIn(SignInRequest) returns (AuthenticatedResponse);

  rpc SignUp(SignUpRequest) returns (AuthenticatedResponse);

  rpc RefreshToken(RefreshTokenRequest) returns (AuthenticatedResponse);
}