syntax = "proto3";

package users_service.v1;

option go_package = "gateway/gen/go/users_service/v1";

import "users_service/v1/models.proto";

message CreateUserRequest {
  string name = 1;
  string email = 2;
  optional string company = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional string email = 3;

  optional string company = 4;

}

message ListUsersRequest {
  string user_id = 1;
  int32 page_size = 3;
  string page_token = 4;
}

message ListUsersResponse {
  repeated User data = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  int32 page_size = 4;
  int32 current_page = 5;
  int32 total_pages = 6;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

service UsersService {

  rpc CreateUser(CreateUserRequest) returns (User);

  rpc GetUser(GetUserRequest) returns (User);

  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  rpc UpdateUser(UpdateUserRequest) returns (User);

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}